Fixed Abstract and Intro

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 \begin{abstract}
 \label{sec:abstract}
-The work undertaken in this paper was done in the Centre of Excellence for Global Systems Science (CoeGSS), an interdisciplinary project, funded by the European Commission. The project provides decision-support in the face of global challenges (e.g. the network structure of the world economy, energy, water and food supply systems, the global financial system or the global city system, and the scientific community). It brings together HPC and global systems science. 
-This paper presents a proposition of GSS benchmark with the aim to find the most suitable HPC architecture and the best HPC system which allows to run GSS applications effectively. 
-The outcome of the analysis is defining a benchmark which represents the average GSS environment in a good way. Three exemplary challenges were defined as pilot applications: Health Habits, Green Growth and Global Urbanisation extended with additional applications from GSS ecosystem. They have been tested on a small set of new HPC platforms based on Intel Xeon Gold 6140, AMD Epyc, ARM Hi1616 and IBM Power8+ processors. 
-Results of the tests provide the architecture comparison for different applications based on execution times, TDPs\footnote{Thermal Design Power} and TCO\footnote{Total Cost of Ownership} as the basic metrics used for providing a ranking of HPC architectures. Finally, the analysis or the results is thought to be valuable information for the GSS community for future purposes to determine their specific demands as well as - in general - to help develop a mature final benchmark set reflecting the GSS environment requirements and speciality.
-\keywords{Global Systems Science, HPC benchmarks, parallel applications, 
-e-Infrastructure evaluation}
+The work undertaken in this paper was done in the Centre of Excellence for Global Systems Science (CoeGSS) -- an interdisciplinary project funded by the European Commission. CoeGSS project provides a computer-aided decision support in the face of global challenges (e.g., development of energy, water and food supply systems, as well as the global financial system and the world economy, urbanization processes and growth of the cities, pandemic control, etc) and tries to bring together HPC and global systems science.
+This paper presents a proposition of GSS benchmark which evaluates HPC architectures with respect to GSS applications and seeks for the best HPC system for typical GSS software environments.
+The outcome of the analysis is defining a benchmark which represents the average GSS environment in a good way. Three exemplary challenges were defined as pilot applications -- spread of smoking habits and development of tobacco industry, development of green cars marker, and global urbanization processes -- extended with additional applications from GSS ecosystem. They have been run on a number of recently appeared HPC platforms based on the state-of-the-art processors -- Intel Xeon Gold 6140, AMD Epyc, ARM Hi1616, and IBM Power8+.
+Results of the tests allow to compare architectures with respect to different applications using execution times, TDPs\footnote{Thermal Design Power} and TCO\footnote{Total Cost of Ownership} as the basic metrics for ranking HPC architectures. Finally, we believe that our analysis of the results conveys a valuable information to the broaded GSS audience which might help to determine the hardware demands for their specific applications, as well as to the HPC community who requires a mature benchmark set reflecting requirements and traits of the GSS applications. Our work can be considered as a step into direction of development of such mature benchmark.
+
+\keywords{Global Systems Science, HPC benchmarks, parallel applications, e-Infrastructure evaluation}
 \end{abstract}
