Organized Apps section, added subsections

--- a/applications.tex
+++ b/applications.tex
@@ -3,24 +3,7 @@ Functionally, the  benchmarked  applications  can  be  categorized  into  two  g
 % The applications have been selected both from projects provided by the project and generally available in public repositories.
 This section contains a short description of tested applications: OpenSWPC, ABM4Py, CCTM, CM1, IPF, HWRF, Pandora/GG.
 
-\paragraph{OpenSWPC} (Open-source Seismic Wave Propagation Code) is an open-source software fro large-scale simulation of seismic waves propagation (2D or 3D) by solving motion equations using the finite difference method (FDM) \cite{OpenSWPC2}. OpenSWPC is widely used in seismology. It ports easily and delivers good performance on different distributed systems varying from small PC clusters to large-scale supercomputers.
-\iffalse
-Without modifying the code, users can simulate seismic wave propagation using their own speed structure models and the necessary source representations in the input parameter file. The software code is equipped with a frequency-independent damping model based on a generalised Zener (standard linear solid - SLS model) body and an efficiently selected, perfectly matched boundary absorbing layer. It has different modes for the different input data types of the velocity structure model and different source representations, such as single force, torque tensioner and flat frequency, which can be easily selected by input parameters. Common binary data formats, a common network data form (NetCDF), and a seismic analysis code (SAC) are used to input a heterogeneous structure model and simulation results so that users can easily operate their input and output data sets. All codes are written in Fortran 2003 and are available with detailed documents in a public repository.
-\fi
-
-\underline{Project repository}: \url{https://github.com/takuto-maeda/OpenSWPC}
-
-\underline{Downloads}: \url{https://github.com/takuto-maeda/OpenSWPC/releases}
-\iffalse
-\underline{Use case description}
-
-The first step was to install the required system packages such as \textit{gmt, gmt-dcw, gmt-gshhg, libnetcdf-dev}. The next one required to run \textit{gen\_JIVSM.sh} script to generate files used as a model input around Japanese Islands for seismic wave propagation in and around Japan. They describe 3D complicated subsurface structures of the earth. The above script used the following input files \textit{lp2012nankai-e\_str.zip, lp2012nankai-w\_str.zip} available from public repository at \cite{HERP} and \textit{ETOPO1\_Bed\_g\_gmt4.grd.gz} from \cite{NOAA} to be installed in the \textit{dataset/vmodel} folder.
-Finally, inside the \textit{OpenSWPC/src} folder the files \textit{shared/makefile.arch} and \textit{shared/makefile-tools.arch} needed to be updated to fix the system paths.
-After successful compilation an input file (e.g example/input.inf) had to be provided to run the application. Critical attributes influencing the run times included the grid size defined by \textit{nx = 1000, ny = 875, nz = 200}   (total grid number in x, y and z directions) and \textit{nt = 100}  (time step number)
-
-Depending on the hardware and installed libraries the following MPI versions were used: Intel\textregistered MPI Library for Linux\textregistered OS, Version 2017 2017.1.132 (2-node Intel\textregistered\ Xeon\textregistered\ Gold 6140, Eagle cluster), Open MPI 1.10.2 (ARM, AMD Epyc\textsuperscript{TM})
-\fi
-
+\subsection{HPC-compliant social simulation software}
 
 \paragraph{ABM4Py} (ABMS for Python) is a distributed agent-based modelling and simulation framework for fast prototyping agent based components of GSS models \cite{2018:abm4py}.
 Agent-based models implemented in \textsf{ABM4Py} follow the graph-based representation \cite{2018:abm4py,2017:graph_abms}.
@@ -48,6 +31,90 @@ Depending on whether the focus is on weak or strong scaling, the example setup c
 
 The application is purely python-based code that requires several modules among which the most important is \textit{h5py} (pythonic interface to the HDF5 binary data format). It additionally requires \textit{class\_auxiliary.pyc,  class\_graph.pyc} and \textit{lib\_gcfabm.pyc} files containing the application's byte code. Additionally, the python environment has to be equipped with additional modules preinstalled such as \textit{numpy, mpi4py, matplotlib, pandas}, etc.
 \fi
+
+\paragraph{Pandora/GG} application serves for benchmarking \textsf{Pandora} agent-based modelling and simulation framework.
+In contrast to \textsf{ABM4Py}, \textsf{Pandora} supports only raster inputs
+which restricts this framework to agent-based models with 2D mesh as a topology of environment.
+On the other hand, \textsf{Pandora} is implemented in C++,
+which allows to reach higher performance compared to Python-based \textsf{ABM4Py} framework.
+
+Our Pandora/GG application implements the green growth agent-based model, first proposed in \cite{2017:gg_pilot}, within \textsf{Pandora} framework.
+%Green Growth using Pandora library
+The green growth model is an innovation-diffusion model for electric cars with a global scope and a fine-scale spatial data resolution.
+%% The model is agent-based and is studying the car-centered global system in view of a green growth transition.
+
+\iffalse
+There are two implementations of his model: deterministic and a stochastic whose implementation for benchmarking purposes was used \cite{2018:abm4py}.
+In this preliminary version of the green growth pilot, authors consider only two classes of cars: "green" cars, which for now correspond to battery electric vehicles due to data availability, and "brown" ones. Cars are distributed on a gridded global map, that is, in the first instance "agents" are simply cells in the grid, which automatically specifies a neighbourhood network between them, and their characteristics are a number of brown and one of green cars. Each cell at each time step computes the number of new cars to be added from the total numbers exogenous given and a percentage of cars being scrapped.
+\fi
+
+\underline{Project Web-page/Repository}: \url{http://xrubio.github.io/pandora/}
+
+\underline{Downloads}: \url{https://github.com/xrubio/pandora/tarball/master}
+\iffalse
+\underline{Use case description}
+
+The first step was to compile the library itself using SCons \cite{SCONS} as the main building tool.  It is open-source, python-based and next generation substitution of make utility. Version 2.4.1 of the tool  was used because the newest version was not compatible with the build input file (/textit{SConstruct}). For the build process Pandora \cite{2014:pandora} requires three additional, external libraries: \textit{HDF5, GDAL} and \textit{BOOST}. In the case of GDAL, version 1.11.5 was used for similar reasons to SCons. GDAL is a Geospatial Data Abstraction Library and presents a single raster abstract data model and single vector abstract data model to the calling application for all supported formats. It also comes with a variety of useful command line utilities for data translation and processing. Finally, Pandora installation required a BOOST C++ library built in place.
+Depending on the hardware and system capabilities the following MPI libraries were used: Intel\textregistered MPI Library for Linux* OS, Version 2017 Update 1, Open MPI 1.10.2 (ARM), impi 5.0.3.048 (Eagle).
+Input data for benchmark has been delivered as two maps (Europe and world) with two different resolutions 840x680 and 8640x3432. 
+
+The above applications were cross-tested with selected processor architectures. The only exception is HWRF (Hurricane WRF), which could not be compiled on the ARM and Power8+ architectures due to the scale of this application and the difficulty in the compilation process.
+Each test has been repeated twice with the measurements for minimum wall time selected to be reported. It is worth noticing that some results reveal unusual and difficult-to-explain behavior in memory consumption and/or I/O, which cannot be anticipated based on processor architecture or node configuration. These cases are supposed to be a subject of future analysis by applications authors or GSS community.
+In general, the characteristic of the applications is found to be different and varying from I/O dependent to purely computational.
+\fi
+
+\paragraph{IPF} (iterative proportional fitting) is a "technique that can be used to adjust a distribution reported in one data set by totals reported in others. IPF is used to revise tables of data where the information is incomplete, inaccurate, outdated, or a sample" \cite{1912:ipf}.
+This procedure reconstructs a contingency matrix based on the known marginals in an unbiased way.
+Nowadays, IPF and its derivatives (e.g., IPU) constitute the computational core of the most popular techniques for gerenating synthetic data which serve as input for agent-based socail simulations \cite{2017:synpop}.
+
+Despite its popularity, we are not aware of any HPC-compliant open-source implementation of IPF.
+In order to overcome this obstacle,
+we coded a simple IPF process using linear algebra kernels from \textsf{ScaLAPACK}.
+This simple implementation was a baseline for our IPF benchmark.
+
+\iffalse
+IPF can be applied to multidimensional matrices, but the multidimensional case is a simple generalization of the two-dimensional case on which we base our presentation.
+IPF fits the matrix coefficients so that the sums of elements of every row and every column are equal to the given respective marginals. The initial contingency matrix values are either all, or are based on some known correlation data (such as a micro sample). In general, IPF solves an underspecified problem, and its result is the maximum likelihood estimation assuming that the elements of the matrix are drawn from the Poisson distribution given by the initial contingency matrix.
+
+IPF is often performed to fit a contingency matrix to known marginals as one step of synthetic population generation. If a lower-dimension contingency matrix is known, their values can be used as marginal for IPF, which then performs fitting that matches the correlations defined by this contingency matrix \cite{2018:norman}.
+The IPF procedure is often followed by sampling, which uses the values from the reconstructed contingency matrix as weights. It may also be followed by the Iterative Proportional Updating (IPU) procedure, which uses reconstructed contingency matrices for individuals and households, and a micro sample of households containing individuals to perform individual-household assignment.
+
+\underline{Use case description}
+
+The benchmarked IPF implementation performs the IPF procedure for a 2-dimensional matrix.
+The implementation is written in C programming language and uses the MPI and PBLAS APIs. MPI and PBLAS are common HPC APIs whose implementations are available on many platforms. On a typical Linux systems they can be provided by the OpenMPI, OpenBLAS and \textsf{ScaLAPACK} open-source packages. On HPC systems they are typically provided by proprietary libraries, such as the Cray MPI library, the Cray libsci library or the Intel MKL library.
+The implementation uses MPI to launch computing processes on different computational nodes, and perform message-based communication between them. The PBLAS API which, if built on top of MPI, provides operations on distributed vectors and matrices, such as computing a sum of a distributed vector (pdasum) or scaling a distributed vector (pdscal), both of which are used by the implementation.
+The PBLAS operations assume that the distributed vectors and matrices are laid out according to the one- or two-dimensional block-cyclic distribution. The distribution is parametrised by the block size, which affects the performance of the operations performed on the vectors and matrices.
+The implementation performs iterations until the maximum-norm error between the target marginals and the marginal computed from the matrix falls below a threshold value.
+
+For testing purposes IPF was compiled against \textsf{ScaLAPACK} and OpenBLAS. 
+Application parameters \textit{PROCROWS, PROCCOLS, ROWBLOCK} and \textit{COLBLOCK}  and a limited number of MPI processes to \textit{PROCROWS* PROCCOLS}. \textit{ROWBLOCK} and \textit{COLBLOCK} are required to be set independently with values equal to the power of 2.
+
+\fi
+
+\textit{Note}: These IPF codes are not published with open access on the Internet yet.
+
+\subsection{Large-scale CFD applications}
+
+\paragraph{OpenSWPC} (Open-source Seismic Wave Propagation Code) is an open-source software fro large-scale simulation of seismic waves propagation (2D or 3D) by solving motion equations using the finite difference method (FDM) \cite{OpenSWPC2}. OpenSWPC is widely used in seismology. It ports easily and delivers good performance on different distributed systems varying from small PC clusters to large-scale supercomputers.
+\iffalse
+Without modifying the code, users can simulate seismic wave propagation using their own speed structure models and the necessary source representations in the input parameter file. The software code is equipped with a frequency-independent damping model based on a generalised Zener (standard linear solid - SLS model) body and an efficiently selected, perfectly matched boundary absorbing layer. It has different modes for the different input data types of the velocity structure model and different source representations, such as single force, torque tensioner and flat frequency, which can be easily selected by input parameters. Common binary data formats, a common network data form (NetCDF), and a seismic analysis code (SAC) are used to input a heterogeneous structure model and simulation results so that users can easily operate their input and output data sets. All codes are written in Fortran 2003 and are available with detailed documents in a public repository.
+\fi
+
+\underline{Project repository}: \url{https://github.com/takuto-maeda/OpenSWPC}
+
+\underline{Downloads}: \url{https://github.com/takuto-maeda/OpenSWPC/releases}
+\iffalse
+\underline{Use case description}
+
+The first step was to install the required system packages such as \textit{gmt, gmt-dcw, gmt-gshhg, libnetcdf-dev}. The next one required to run \textit{gen\_JIVSM.sh} script to generate files used as a model input around Japanese Islands for seismic wave propagation in and around Japan. They describe 3D complicated subsurface structures of the earth. The above script used the following input files \textit{lp2012nankai-e\_str.zip, lp2012nankai-w\_str.zip} available from public repository at \cite{HERP} and \textit{ETOPO1\_Bed\_g\_gmt4.grd.gz} from \cite{NOAA} to be installed in the \textit{dataset/vmodel} folder.
+Finally, inside the \textit{OpenSWPC/src} folder the files \textit{shared/makefile.arch} and \textit{shared/makefile-tools.arch} needed to be updated to fix the system paths.
+After successful compilation an input file (e.g example/input.inf) had to be provided to run the application. Critical attributes influencing the run times included the grid size defined by \textit{nx = 1000, ny = 875, nz = 200}   (total grid number in x, y and z directions) and \textit{nt = 100}  (time step number)
+
+Depending on the hardware and installed libraries the following MPI versions were used: Intel\textregistered MPI Library for Linux\textregistered OS, Version 2017 2017.1.132 (2-node Intel\textregistered\ Xeon\textregistered\ Gold 6140, Eagle cluster), Open MPI 1.10.2 (ARM, AMD Epyc\textsuperscript{TM})
+\fi
+
+
 
 \paragraph{CMAQ/CCTM}
 (Community Air Multiscale Quality Modelling System) is an active open-source project of the U.S. EPA (\textit{Environmental Protection Agency}) %Computational Exposure Division
@@ -89,37 +156,6 @@ CM1 is also designed for distributed-memory computing systems. In CM1 there are 
 CM1 use case contains the following steps: CM1 software download and unpack  \cite{CM1DATA}, compilation and build. When successfully compiled, a \textit{cm1.exe} binary file is created under \textit{cm1r19/run} directory. \textit{cm1r19/ run/ namelist.input} configuration file was used with appropriate \textit{nodex, nodey} and \textit{ppnode} values to let the simulation start on the given number of processors (NP). The simulation is started by calling mpirun: \textit{mpirun -np \$NP ./cm1.exe}
 \fi
 
-\paragraph{IPF} (iterative proportional fitting) is a "technique that can be used to adjust a distribution reported in one data set by totals reported in others. IPF is used to revise tables of data where the information is incomplete, inaccurate, outdated, or a sample" \cite{1912:ipf}.
-This procedure reconstructs a contingency matrix based on the known marginals in an unbiased way.
-Nowadays, IPF and its derivatives (e.g., IPU) constitute the computational core of the most popular techniques for gerenating synthetic data which serve as input for agent-based socail simulations \cite{2017:synpop}.
-
-Despite its popularity, we are not aware of any HPC-compliant open-source implementation of IPF.
-In order to overcome this obstacle,
-we coded a simple IPF process using linear algebra kernels from \textsf{ScaLAPACK}.
-This simple implementation was a baseline for our IPF benchmark.
-
-\iffalse
-IPF can be applied to multidimensional matrices, but the multidimensional case is a simple generalization of the two-dimensional case on which we base our presentation.
-IPF fits the matrix coefficients so that the sums of elements of every row and every column are equal to the given respective marginals. The initial contingency matrix values are either all, or are based on some known correlation data (such as a micro sample). In general, IPF solves an underspecified problem, and its result is the maximum likelihood estimation assuming that the elements of the matrix are drawn from the Poisson distribution given by the initial contingency matrix.
-
-IPF is often performed to fit a contingency matrix to known marginals as one step of synthetic population generation. If a lower-dimension contingency matrix is known, their values can be used as marginal for IPF, which then performs fitting that matches the correlations defined by this contingency matrix \cite{2018:norman}.
-The IPF procedure is often followed by sampling, which uses the values from the reconstructed contingency matrix as weights. It may also be followed by the Iterative Proportional Updating (IPU) procedure, which uses reconstructed contingency matrices for individuals and households, and a micro sample of households containing individuals to perform individual-household assignment.
-
-\underline{Use case description}
-
-The benchmarked IPF implementation performs the IPF procedure for a 2-dimensional matrix.
-The implementation is written in C programming language and uses the MPI and PBLAS APIs. MPI and PBLAS are common HPC APIs whose implementations are available on many platforms. On a typical Linux systems they can be provided by the OpenMPI, OpenBLAS and \textsf{ScaLAPACK} open-source packages. On HPC systems they are typically provided by proprietary libraries, such as the Cray MPI library, the Cray libsci library or the Intel MKL library.
-The implementation uses MPI to launch computing processes on different computational nodes, and perform message-based communication between them. The PBLAS API which, if built on top of MPI, provides operations on distributed vectors and matrices, such as computing a sum of a distributed vector (pdasum) or scaling a distributed vector (pdscal), both of which are used by the implementation.
-The PBLAS operations assume that the distributed vectors and matrices are laid out according to the one- or two-dimensional block-cyclic distribution. The distribution is parametrised by the block size, which affects the performance of the operations performed on the vectors and matrices.
-The implementation performs iterations until the maximum-norm error between the target marginals and the marginal computed from the matrix falls below a threshold value.
-
-For testing purposes IPF was compiled against \textsf{ScaLAPACK} and OpenBLAS. 
-Application parameters \textit{PROCROWS, PROCCOLS, ROWBLOCK} and \textit{COLBLOCK}  and a limited number of MPI processes to \textit{PROCROWS* PROCCOLS}. \textit{ROWBLOCK} and \textit{COLBLOCK} are required to be set independently with values equal to the power of 2.
-
-\fi
-
-\textit{Note}: These IPF codes are not published with open access on the Internet yet.
-
 \paragraph{WRF} (Weather Research and Forecasting model) is an example of a well-scalable application,
 which motivated us to add it to the set of tests in order to increase the variety of requirements of the {GSS benchmark}. 
 %% Hurricane Katrina formed as Tropical Depression Twelve over the southeastern Bahamas on August 23, 2005, as the result of an interaction of a tropical wave and the remains of Tropical Depression Ten.
@@ -138,36 +174,6 @@ It is used to forecast the track and intensity of tropical cyclones.
 % The model was developed by the National Oceanic and Atmospheric Administration (NOAA), the U.S. Naval Research Laboratory, the University of Rhode Island, and Florida State University. 
 \fi
 
-\paragraph{Pandora/GG} application serves for benchmarking \textsf{Pandora} agent-based modelling and simulation framework.
-In contrast to \textsf{ABM4Py}, \textsf{Pandora} supports only raster inputs
-which restricts this framework to agent-based models with 2D mesh as a topology of environment.
-On the other hand, \textsf{Pandora} is implemented in C++,
-which allows to reach higher performance compared to Python-based \textsf{ABM4Py} framework.
-
-Our Pandora/GG application implements the green growth agent-based model, first proposed in \cite{2017:gg_pilot}, within \textsf{Pandora} framework.
-%Green Growth using Pandora library
-The green growth model is an innovation-diffusion model for electric cars with a global scope and a fine-scale spatial data resolution.
-%% The model is agent-based and is studying the car-centered global system in view of a green growth transition.
-
-\iffalse
-There are two implementations of his model: deterministic and a stochastic whose implementation for benchmarking purposes was used \cite{2018:abm4py}.
-In this preliminary version of the green growth pilot, authors consider only two classes of cars: "green" cars, which for now correspond to battery electric vehicles due to data availability, and "brown" ones. Cars are distributed on a gridded global map, that is, in the first instance "agents" are simply cells in the grid, which automatically specifies a neighbourhood network between them, and their characteristics are a number of brown and one of green cars. Each cell at each time step computes the number of new cars to be added from the total numbers exogenous given and a percentage of cars being scrapped.
-\fi
-
-\underline{Project Web-page/Repository}: \url{http://xrubio.github.io/pandora/}
-
-\underline{Downloads}: \url{https://github.com/xrubio/pandora/tarball/master}
-\iffalse
-\underline{Use case description}
-
-The first step was to compile the library itself using SCons \cite{SCONS} as the main building tool.  It is open-source, python-based and next generation substitution of make utility. Version 2.4.1 of the tool  was used because the newest version was not compatible with the build input file (/textit{SConstruct}). For the build process Pandora \cite{2014:pandora} requires three additional, external libraries: \textit{HDF5, GDAL} and \textit{BOOST}. In the case of GDAL, version 1.11.5 was used for similar reasons to SCons. GDAL is a Geospatial Data Abstraction Library and presents a single raster abstract data model and single vector abstract data model to the calling application for all supported formats. It also comes with a variety of useful command line utilities for data translation and processing. Finally, Pandora installation required a BOOST C++ library built in place.
-Depending on the hardware and system capabilities the following MPI libraries were used: Intel\textregistered MPI Library for Linux* OS, Version 2017 Update 1, Open MPI 1.10.2 (ARM), impi 5.0.3.048 (Eagle).
-Input data for benchmark has been delivered as two maps (Europe and world) with two different resolutions 840x680 and 8640x3432. 
-
-The above applications were cross-tested with selected processor architectures. The only exception is HWRF (Hurricane WRF), which could not be compiled on the ARM and Power8+ architectures due to the scale of this application and the difficulty in the compilation process.
-Each test has been repeated twice with the measurements for minimum wall time selected to be reported. It is worth noticing that some results reveal unusual and difficult-to-explain behavior in memory consumption and/or I/O, which cannot be anticipated based on processor architecture or node configuration. These cases are supposed to be a subject of future analysis by applications authors or GSS community.
-In general, the characteristic of the applications is found to be different and varying from I/O dependent to purely computational.
-\fi
 
 This document does not go further into theory as it is beyond its main subject.
 We refer the interested reader for more technical details to the reports \cite{2017:coegss_benchmark1,2018:coegss_benchmark2}.
